Add custom activity for crash

--- a/keyOS/res/values-en-rGB/strings.xml
+++ b/keyOS/res/values-en-rGB/strings.xml
@@ -109,7 +109,7 @@
     <string name="custom">Custom</string>
     <!-- Section 11 -->
     <!-- Section 12 -->
-    <string name="settings_button_text">Home Settings</string>
+    <string name="settings_button_text">Kiosk Settings</string>
     <string name="customize">Customise</string>
     <string name="advanced_settings">More Settings</string>
     <string name="adaptive_icon">Adaptive Icon</string>
