--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -361,6 +361,7 @@
     <string name="app_crash_subheading">Sorry for the inconvenience we will fix this issue soon</string>
     <string name="exit">Exit</string>
     <string name="custom_settings">Settings</string>
+    <string name="plugins">Plugins</string>
 
 
 </resources>
